plugins {
        id 'java'
        id 'eclipse'
}

java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
}

repositories {
        mavenCentral()
}

dependencies {
	testImplementation "junit:junit:4.13.2"
	implementation "org.apache.commons:commons-lang3:3.1"
	implementation "org.apache.commons:commons-math3:3.2"
	implementation "org.apache.avro:avro:1.7.5"
	implementation "org.apache.thrift:libthrift:0.12.0"
}

test {
        testLogging {
                events "passed", "skipped", "failed"
        }
}

// Enforce Java 17+ at build time
if (JavaVersion.current() < JavaVersion.VERSION_17) {
        throw new GradleException("Java 17 or higher is required to build this project. You are using Java ${JavaVersion.current()}")
}
